fix bug with capitalization of jump and land markers

--- a/game/board-and-pieces.css
+++ b/game/board-and-pieces.css
@@ -128,11 +128,6 @@
   pointer-events: none;
 }
 
-.jump-land-marker::before {
-  content: attr(data-jl);
-  text-transform: capitalize;
-}
-
 .helo {
   position: absolute;
   pointer-events: none;
